--- a/index.html
+++ b/index.html
@@ -10,8 +10,72 @@
     <!-- Wrapper -->
 
     <div>
-      <!-- Top line -->
-      <div></div>
+      <div>
+        <div>
+          <!-- Top Line -->
+          <h3>Web Studio</h3>
+          <h3>Studio</h3>
+          <h3>Portfolio</h3>
+          <h3>Contacts</h3>
+          <h3>info@devstudio.com</h3>
+          <h3>+11 (000) 111-11-1</h3>
+        </div>
+
+        <div>
+          <!-- Blue box -->
+          <h1>Effective Solutions for Your Business</h1>
+        </div>
+        <div>
+          <!-- Button -->
+          <button>Order Service</button>
+        </div>
+      </div>
+
+      <div>
+        <!-- Section 1 -->
+
+        <div>
+          <!-- Feauture 1 - Strategy -->
+          <div>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </div>
+          <div>
+            <!-- Feauture 2 - Punctuality -->
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </div>
+          <div>
+            <!-- Feauture 3 - Diligence -->
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </div>
+          <div>
+            <!-- Feauture 4 - Technologies -->
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </div>
+        </div>
+
+        <!-- Section 2 -->
+
+        <div>
+          <!-- Text -->
+          <h1>What are we doing</h1>
+        </div>
+      </div>
     </div>
   </body>
 </html>
