--- a/index.html
+++ b/index.html
@@ -75,6 +75,63 @@
           <!-- Text -->
           <h1>What are we doing</h1>
         </div>
+        <div>
+          <!-- Pictures -->
+          <img src="./images/img1.jpg" alt="img 1" width="300px" />
+          <img src="./images/img2.jpg" alt="img 2" width="300px" />
+          <img src="./images/img3.jpg" alt="img 3" width="300px" />
+        </div>
+        <div>
+          <!-- Light blue box -->
+
+          <div>
+            <h1>Our Team</h1>
+          </div>
+
+          <!-- Pictures -->
+          <div>
+            <img
+              src="./images/Mark Guerrero.jpg"
+              alt="Mark Guerrero"
+              width="300px"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </div>
+          <div>
+            <img src="./images/Tom Ford.jpg" alt="Tom Ford" width="300px" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </div>
+          <div>
+            <img
+              src="./images/Camila Garcia.jpg"
+              alt="Camila Garcia"
+              width="300px"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </div>
+          <div>
+            <img
+              src="./images/Daniel Wilson.jpg"
+              alt="Daniel Wilson"
+              width="300px"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </div>
+          <div>
+            <!-- Footer -->
+            <div>
+              <h2>Web Studio</h2>
+              <p>
+                Increase the flow of customers and sales for your business with
+                digital marketing & growth solutions.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
