--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         </div>
         <div>
           <!-- Pictures -->
-          <img src="./images/img1.jpg" alt="img 1" width="300px" />
-          <img src="./images/img2.jpg" alt="img 2" width="300px" />
-          <img src="./images/img3.jpg" alt="img 3" width="300px" />
+          <img src="./images/img1.jpg" alt="img 1" width="300" />
+          <img src="./images/img2.jpg" alt="img 2" width="300" />
+          <img src="./images/img3.jpg" alt="img 3" width="300" />
         </div>
         <div>
           <!-- Light blue box -->
@@ -91,32 +91,32 @@
           <!-- Pictures -->
           <div>
             <img
-              src="./images/Mark Guerrero.jpg"
+              src="./images/Mark_Guerrero.jpg"
               alt="Mark Guerrero"
-              width="200px"
+              width="200"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </div>
           <div>
-            <img src="./images/Tom Ford.jpg" alt="Tom Ford" width="200px" />
+            <img src="./images/Tom_Ford.jpg" alt="Tom Ford" width="200" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </div>
           <div>
             <img
-              src="./images/Camila Garcia.jpg"
+              src="./images/Camila_Garcia.jpg"
               alt="Camila Garcia"
-              width="200px"
+              width="200"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </div>
           <div>
             <img
-              src="./images/Daniel Wilson.jpg"
+              src="./images/Daniel_Wilson.jpg"
               alt="Daniel Wilson"
-              width="200px"
+              width="200"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
