--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
     <title>goit-markup-hw-01</title>
   </head>
   <body>
-    <!-- Wrapper -->
+    <header>
+      <!-- Wrapper -->
 
+      <div>
+        <!-- Header -->
+        <nav>
+          <a href="Web_Studio">Web Studio</a>
+          <a href="Studio">Studio</a>
+          <a href="Portfolio">Portfolio</a>
+          <a href="Contacts">Contacts</a>
+        </nav>
+        <a href="info@devstudio.com">info@devstudio.com</a>
+        <a href="+11(000)111-11-1">+11 (000) 111-11-1</a>
+      </div>
+    </header>
     <div>
       <div>
-        <div>
-          <!-- Top Line -->
-          <h3>Web Studio</h3>
-          <h3>Studio</h3>
-          <h3>Portfolio</h3>
-          <h3>Contacts</h3>
-          <h3>info@devstudio.com</h3>
-          <h3>+11 (000) 111-11-1</h3>
-        </div>
-
         <div>
           <!-- Blue box -->
           <h1>Effective Solutions for Your Business</h1>
@@ -73,7 +76,7 @@
 
         <div>
           <!-- Text -->
-          <h1>What are we doing</h1>
+          <h2>What are we doing</h2>
         </div>
         <div>
           <!-- Pictures -->
@@ -85,7 +88,7 @@
           <!-- Light blue box -->
 
           <div>
-            <h1>Our Team</h1>
+            <h2>Our Team</h2>
           </div>
 
           <!-- Pictures -->
@@ -121,16 +124,18 @@
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </div>
-          <div>
-            <!-- Footer -->
+          <footer>
             <div>
-              <h2>Web Studio</h2>
-              <p>
-                Increase the flow of customers and sales for your business with
-                digital marketing & growth solutions.
-              </p>
+              <!-- Footer -->
+              <div>
+                <a href="Web_Studio">Web</a><span>studio</span>
+                <p>
+                  Increase the flow of customers and sales for your business
+                  with digital marketing & growth solutions.
+                </p>
+              </div>
             </div>
-          </div>
+          </footer>
         </div>
       </div>
     </div>
