--- a/index.html
+++ b/index.html
@@ -8,91 +8,89 @@
   </head>
   <body>
     <header>
-      <!-- Wrapper -->
+      <!-- Header -->
 
-      <div>
-        <!-- Header -->
-        <nav>
-          <a href="Web_Studio">Web Studio</a>
-          <a href="Studio">Studio</a>
-          <a href="Portfolio">Portfolio</a>
-          <a href="Contacts">Contacts</a>
-        </nav>
-        <a href="info@devstudio.com">info@devstudio.com</a>
-        <a href="+11(000)111-11-1">+11 (000) 111-11-1</a>
-      </div>
+      <nav>
+        <a href="/"> <img src="./images/Web.svg" alt="Company logo" /></a>
+        <a href=""> <img src="./images/Studio.svg" alt="Company logo" /></a>
+
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+
+        <ul>
+          <li><a href="">info@devstudio.com</a></li>
+          <li><a href="">+11 (000) 111-11-11</a></li>
+        </ul>
+      </nav>
     </header>
-    <div>
+
+    <main>
       <div>
-        <div>
-          <!-- Blue box -->
+        <section>
           <h1>Effective Solutions for Your Business</h1>
-        </div>
-        <div>
-          <!-- Button -->
-          <button>Order Service</button>
-        </div>
+          <a href="">Order Service</a>
+        </section>
       </div>
 
-      <div>
-        <!-- Section 1 -->
-
-        <div>
-          <!-- Feauture 1 - Strategy -->
-          <div>
+      <section>
+        <ul>
+          <li>
             <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
-          </div>
-          <div>
-            <!-- Feauture 2 - Punctuality -->
+          </li>
+
+          <li>
             <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
-          </div>
-          <div>
-            <!-- Feauture 3 - Diligence -->
+          </li>
+
+          <li>
             <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
-          </div>
-          <div>
-            <!-- Feauture 4 - Technologies -->
+          </li>
+
+          <li>
             <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
-          </div>
-        </div>
+          </li>
+        </ul>
+      </section>
 
-        <!-- Section 2 -->
+      <section>
+        <h2>What are we doing</h2>
 
-        <div>
-          <!-- Text -->
-          <h2>What are we doing</h2>
-        </div>
-        <div>
-          <!-- Pictures -->
-          <img src="./images/img1.jpg" alt="img 1" width="300" />
-          <img src="./images/img2.jpg" alt="img 2" width="300" />
-          <img src="./images/img3.jpg" alt="img 3" width="300" />
-        </div>
-        <div>
-          <!-- Light blue box -->
+        <ul>
+          <li><img src="./images/img1.jpg" alt="PC" width="200" /></li>
+        </ul>
+        <ul>
+          <li><img src="./images/img2.jpg" alt="Phote" width="200" /></li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./images/img3.jpg" alt="Phone in hand" width="200" />
+          </li>
+        </ul>
+      </section>
 
-          <div>
-            <h2>Our Team</h2>
-          </div>
-
-          <!-- Pictures -->
-          <div>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
             <img
               src="./images/Mark_Guerrero.jpg"
               alt="Mark Guerrero"
@@ -100,13 +98,13 @@
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
-          </div>
-          <div>
+          </li>
+          <li>
             <img src="./images/Tom_Ford.jpg" alt="Tom Ford" width="200" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
-          </div>
-          <div>
+          </li>
+          <li>
             <img
               src="./images/Camila_Garcia.jpg"
               alt="Camila Garcia"
@@ -114,8 +112,8 @@
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
-          </div>
-          <div>
+          </li>
+          <li>
             <img
               src="./images/Daniel_Wilson.jpg"
               alt="Daniel Wilson"
@@ -123,21 +121,21 @@
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
-          </div>
-          <footer>
-            <div>
-              <!-- Footer -->
-              <div>
-                <a href="Web_Studio">Web</a><span>studio</span>
-                <p>
-                  Increase the flow of customers and sales for your business
-                  with digital marketing & growth solutions.
-                </p>
-              </div>
-            </div>
-          </footer>
-        </div>
-      </div>
-    </div>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <ul>
+        <li>
+          <a href="Web_Studio">Web</a><span>studio</span>
+          <p>
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
