--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
     <footer>
       <ul>
         <li>
-          <a href="Web_Studio">Web</a><span>studio</span>
+          <a href="/"> <img src="./images/Web.svg" alt="Company logo" /></a>
+          <a href=""> <img src="./images/Studio.svg" alt="Company logo" /></a>
           <p>
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
