--- a/index.html
+++ b/index.html
@@ -11,27 +11,25 @@
       <!-- Header -->
 
       <nav>
-        <a href="/"> <img src="./images/Web.svg" alt="Company logo" /></a>
-        <a href=""> <img src="./images/Studio.svg" alt="Company logo" /></a>
+        <a href="Web_Studio">Web</a><span>studio</span>
 
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
-
-        <ul>
-          <li><a href="">info@devstudio.com</a></li>
-          <li><a href="">+11 (000) 111-11-11</a></li>
-        </ul>
       </nav>
+      <ul>
+        <li><a href="">info@devstudio.com</a></li>
+        <li><a href="">+11 (000) 111-11-11</a></li>
+      </ul>
     </header>
 
     <main>
       <div>
         <section>
           <h1>Effective Solutions for Your Business</h1>
-          <a href="">Order Service</a>
+          <button>Order Service</button>
         </section>
       </div>
 
@@ -129,8 +127,7 @@
     <footer>
       <ul>
         <li>
-          <a href="/"> <img src="./images/Web.svg" alt="Company logo" /></a>
-          <a href=""> <img src="./images/Studio.svg" alt="Company logo" /></a>
+          <a href="Web_Studio">Web</a><span>studio</span>
           <p>
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
