--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <!-- Header -->
 
       <nav>
-        <a href="Web_Studio">Web</a><span>studio</span>
+        <a href="https://www.youtube.com/watch?v=M4TROmyEdHI">Web</a
+        ><span>studio</span>
 
         <ul>
           <li><a href="">Studio</a></li>
@@ -19,16 +20,21 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="">info@devstudio.com</a></li>
+          <li><a href="">+11(000)111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
     <main>
       <div>
         <section>
-          <h1>Effective Solutions for Your Business</h1>
+          <h1>
+            Effective Solutions <br />
+            for Your Business
+          </h1>
           <button>Order Service</button>
         </section>
       </div>
@@ -70,7 +76,7 @@
       </section>
 
       <section>
-        <h2>What are we doing</h2>
+        <h3>What are we doing</h3>
 
         <ul>
           <li><img src="./images/img1.jpg" alt="PC" width="200" /></li>
