--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
       <!-- Header -->
 
       <nav>
-        <a href="https://www.youtube.com/watch?v=M4TROmyEdHI">Web</a
-        ><span>studio</span>
+        <a href="./index.html">Webstudio</a>
 
         <ul>
           <li><a href="">Studio</a></li>
