--- a/index.html
+++ b/index.html
@@ -132,10 +132,11 @@
     <footer>
       <ul>
         <li>
-          <a href="Web_Studio">Web</a><span>studio</span>
+          <a href="./index.html">Webstudio</a>
           <p>
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
+            Increase the flow of customers and <br />
+            sales for your business with digital <br />
+            marketing & growth solutions.
           </p>
         </li>
       </ul>
