--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <a href="./index.html">Webstudio</a>
 
         <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11(000)111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -130,9 +130,9 @@
     </main>
 
     <footer>
+      <a href="./index.html">Webstudio</a>
       <ul>
         <li>
-          <a href="./index.html">Webstudio</a>
           <p>
             Increase the flow of customers and <br />
             sales for your business with digital <br />
