--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <!-- Header -->
 
       <nav>
-        <a href="./index.html">Webstudio</a>
+        <a href="./index.html">WebStudio</a>
 
         <ul>
           <li><a href="">Studio</a></li>
@@ -30,10 +30,7 @@
     <main>
       <div>
         <section>
-          <h1>
-            Effective Solutions <br />
-            for Your Business
-          </h1>
+          <h1>Effective Solutions for Your Business</h1>
           <button type="button">Order Service</button>
         </section>
       </div>
@@ -130,7 +127,7 @@
     </main>
 
     <footer>
-      <a href="./index.html">Webstudio</a>
+      <a href="./index.html">WebStudio</a>
       <ul>
         <li>
           <p>
