--- a/index.html
+++ b/index.html
@@ -128,15 +128,11 @@
 
     <footer>
       <a href="./index.html">WebStudio</a>
-      <ul>
-        <li>
-          <p>
-            Increase the flow of customers and <br />
-            sales for your business with digital <br />
-            marketing & growth solutions.
-          </p>
-        </li>
-      </ul>
+
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
