--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
     </header>
 
     <main>
-      <div>
-        <section>
-          <h1>Effective Solutions for Your Business</h1>
-          <button type="button">Order Service</button>
-        </section>
-      </div>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
 
       <section>
+        <h2 style="display: none">Our advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
