--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-01</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
@@ -34,7 +34,7 @@
       </section>
 
       <section>
-        <h2 style="display: none">Our advantages</h2>
+        <h2>Our advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
